@@ -1,3 +1,11 @@
+TAG: pdfdownload-6-0-23-6
+TAG: pdfdownload-6-0-23-5
+DATE: 05/01/2024
+STAFF: lec
+wts2-1467/fl2-847/pdf download trackback error/elsevier
+comment out: pmc/backPopulate.py/#progress("Warning: '%s'\n" % text)
+curous to see what happens:  HISTORICAL_WINDOW_SIZE = 240 -> 90
+
 TAG: pdfdownload-6-0-23-4
 DATE: 03/13/2024
 STAFF: sc
